# PLAproject

./: .gitmodules  README.md
SorterDriver/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  SorterDriver  cmake_install.cmake  main.cpp  valveInterface.py
SorterDriver/include/: commandInterface.hpp  valve.hpp
SorterDriver/lib/: Feature-extraction-C-  ROIExtractionPLA
SorterDriver/src/: commandInterface.cpp  valve.cpp
